# revers

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  index.html
scripts/: handshake.py
src/reversegent/: __init__.py  __main__.py  agent.py  analyzer.py  autodetect.py  browser.py  browser_presets.py  cli.py  clients.py  config.py  conversation.py  interactive.py  knowledge.py  planner.py  prober.py  prompts.py  react.py  robustness.py  synthesizer.py
src/reversegent/strategies/: __init__.py  auth_recon.py  behavioral_rules.py  boundary_testing.py  comparative_analysis.py  completion_attack.py  constraint_consistency.py  context_variable_probing.py  contradiction_testing.py  contrastive_probing.py  direct_extraction.py  domain_advice_probing.py  dynamic_context.py  env_extraction.py  error_provocation.py  evenhandedness_probing.py  format_exploitation.py  hypothetical_framing.py  instruction_following.py  model_fingerprinting.py  output_format_analysis.py  product_identity_probing.py  protocol_detection.py  recursive_meta.py  refusal_boundary_mapping.py  role_play.py  secret_leak.py  tone_style_observation.py  tool_discovery.py  tool_exercise.py  wellbeing_probing.py
targets/: example.json
tests/: fake_chat.html  host.html  inspect_chat.py  inspect_page.py  live_probe.py  read_msgs.py  smoke_browser.py  test_autodetect.py  test_conversation.py  test_react_loop.py  test_wait_logic.py  widget.html
