[project]
name = "reversegent"
version = "0.1.0"
description = "Reverse-engineer AI agent system prompts through iterative probing"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
anthropic = ["anthropic>=0.40.0"]
all = ["playwright>=1.40.0", "anthropic>=0.40.0"]

[project.scripts]
reversegent = "reversegent.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
